--- a/microservice-respuestas/src/main/resources/application.properties
+++ b/microservice-respuestas/src/main/resources/application.properties
@@ -4,10 +4,4 @@ eureka.instance.instance-id=${spring.application.name}:${random.value}
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-
-spring.datasource.url=jdbc:mysql://localhost:3306/microservicios_alumno
-spring.datasource.username = root
-spring.datasource.password =
-
-spring.jpa.hibernate.ddl-auto=update
-logging.level.org.hibernate.SQL=debug
+spring.data.mongodb.uri=mongodb://localhost:27017/microservice_respuestas_db
